# microcwt

./: Cargo.toml  LICENCE-APACHE  LICENSE-MIT  README.md
src/: lib.rs  scales.rs  wavelet.rs
tests/: cwt_test.rs
