[package]
name = "microcwt"
version = "0.1.0"
authors = ["Bjorn Beishline"]
description = "Embedded-friendly Continuous Wavelet Transform (CWT) library based on fCWT."
documentation = "https://docs.rs/microcwt"
readme = "README.md"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/BjornTheProgrammer/microcwt"
repository = "https://github.com/BjornTheProgrammer/microcwt"
keywords = ["cwt", "transform", "wavelet"]
categories = ["algorithms", "mathematics", "science", "embedded", "no-std"]
edition = "2024"

[dependencies]
num = { version = "0.4", features = ["libm"], default-features = false }
microfft = { version = "0.6.0", default-features = false, features = [
    "size-512",
    "size-1024",
    "size-2048",
    "size-4096",
    "size-8192",
    "size-16384",
] }
# libm = "0.2"

[dev-dependencies]
# lets tests use std even though lib is no_std
num = { version = "0.4", features = ["std"] }
